@@ -1,0 +1,3 @@
+ This plugin provides ADMS.SW additions to the DOAP RDF documents for projects on /projects URLs 
+ with content-negociation (application/rdf+xml).
+ 
